<resources>
    <string name="app_name">Layout</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="question">Thanks for choosing our awesome blend tea. How do you want it serving?</string>
    <string name="temperature">Temperature:</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
</resources>
